@@ -297,7 +297,7 @@ getenv {identifier}: display the value of the {identifier} environment variable
 .B
 goto
 .fi
-goto {['+'|'\-']{number}['%']['f'|'p']} | {/{regexp}/} | {'+//'} | {'+/'|'\-/'}[C] | {{'+'|'\-'}{identifier}['+']}: jump to an image; if {number} is given, and not surrounded by any specifier, will go to image at index {number} ; if followed by '%', the effective index will be computed as a percentage to the current available images; if prepended by '\-' or '+', the jump will be relative to the current index; the 'f' specifier asks for the jump to occur within the files; the 'p' specifier asks for the jump to occur in terms of pages, within the current file; '+/'C or '\-/'C will jump to next or previous file according to C: if 's' if same directory, if 'd' if down the directory hierarchy, if 'u' if down the directory hierarchy, if 'b' if same basename, if upper case match is negative, if missing defaults to 'S' (jump to file in different dir); if an {identifier} is encountered after a '+' or '\-' sign, jump to next or previous image having a different value for i:{identifier} (a trailing '+' will require a non empty value); if /{regexp}/ is given, will jump to the first image matching the given /{regexp}/ regular expression pattern; if given '+//', will jump to the first different image matching the last given regular expression pattern. Match will occur on both file name and description, eventually loaded via desc or \-\-load\-image\-descriptions\-file. See also _lastgotodirection and _re_search_opts.
+goto {['+'|'\-']{number}['%']['f'|'p']} | {/{regexp}/} | {'+//'} | {'+/'|'\-/'}[C] | {{'+'|'\-'}{identifier}['+']}: jump to an image; if {number} is given, and not surrounded by any specifier, will go to image at index {number} ; if followed by '%', the effective index will be computed as a percentage to the current available images; if prepended by '\-' or '+', the jump will be relative to the current index; the 'f' specifier asks for the jump to occur within the files; the 'p' specifier asks for the jump to occur in terms of pages, within the current file; '+/'C or '\-/'C will jump to next or previous file according to C: if 's' if same directory, if 'd' if down the directory hierarchy, if 'u' if down the directory hierarchy, if 'b' if same basename, if upper case match is negative, if missing defaults to 'S' (jump to file in different dir); if an {identifier} is encountered after a '+' or '\-' sign, jump to next or previous image having a different value for i:{identifier} (a trailing '+' will require a non empty value); if /{regexp}/ is given, will jump to the first image matching the given /{regexp}/ regular expression pattern; if given '+//', will jump to the first different image matching the last given regular expression pattern. Match will occur on both file name and description, eventually loaded via desc or \-\-load\-image\-descriptions\-file. See also _lastgotodirection and _re_search_opts. You can specify multiple arguments to goto: those after the first triggering a jump will be ignored.
 .fi
 
 .na
