@@ -1005,7 +1005,7 @@ namespace fim
 #else /* FIM_DISABLE_WINDOW_SPLITTING */
 #define FIM_CMD_HELP_WINDOW FIM_FLT_WINDOW " " FIM_CNS_EX_ARGS_STRING ": manipulates the window system windows; each value of " FIM_CNS_EX_ARGS_STRING " shall be one of ['split' | 'hsplit' | 'vsplit' | 'normalize' | 'enlarge' | 'venlarge' | 'henlarge' | 'up' | 'down' | 'left' | 'right' | 'close' | 'swap']"
 #endif /* FIM_DISABLE_WINDOW_SPLITTING */
-#define FIM_CMD_HELP_GOTO 	FIM_FLT_GOTO " {['+'|'-']" FIM_CNS_EX_NUM_STRING "['%']['f'|'p']} | {/" FIM_CNS_EX_RE_STRING "/} | {'+//'} | {'+/'|'-/'}[C] | {{'+'|'-'}" FIM_CNS_EX_ID_STRING "['+']}: jump to an image; if " FIM_CNS_EX_NUM_STRING " is given, and not surrounded by any specifier, will go to image at index " FIM_CNS_EX_NUM_STRING " ; if followed by '%', the effective index will be computed as a percentage to the current available images; if prepended by '-' or '+', the jump will be relative to the current index; the 'f' specifier asks for the jump to occur within the files; the 'p' specifier asks for the jump to occur in terms of pages, within the current file; '+/'C or '-/'C will jump to next or previous file according to C: if 's' if same directory, if 'd' if down the directory hierarchy, if 'u' if down the directory hierarchy, if 'b' if same basename, if upper case match is negative, if missing defaults to 'S' (jump to file in different dir); if an " FIM_CNS_EX_ID_STRING " is encountered after a '+' or '-' sign, jump to next or previous image having a different value for i:" FIM_CNS_EX_ID_STRING " (a trailing '+' will require a non empty value); if /" FIM_CNS_EX_RE_STRING "/ is given, will jump to the first image matching the given /" FIM_CNS_EX_RE_STRING "/ regular expression pattern; if given '+//', will jump to the first different image matching the last given regular expression pattern. Match will occur on both file name and description, eventually loaded via " FIM_FLT_DESC " or --" FIM_OSW_LOAD_IMG_DSC_FILE ". See also " FIM_VID_LASTGOTODIRECTION " and " FIM_VID_RE_SEARCH_OPTS "."
+#define FIM_CMD_HELP_GOTO 	FIM_FLT_GOTO " {['+'|'-']" FIM_CNS_EX_NUM_STRING "['%']['f'|'p']} | {/" FIM_CNS_EX_RE_STRING "/} | {'+//'} | {'+/'|'-/'}[C] | {{'+'|'-'}" FIM_CNS_EX_ID_STRING "['+']}: jump to an image; if " FIM_CNS_EX_NUM_STRING " is given, and not surrounded by any specifier, will go to image at index " FIM_CNS_EX_NUM_STRING " ; if followed by '%', the effective index will be computed as a percentage to the current available images; if prepended by '-' or '+', the jump will be relative to the current index; the 'f' specifier asks for the jump to occur within the files; the 'p' specifier asks for the jump to occur in terms of pages, within the current file; '+/'C or '-/'C will jump to next or previous file according to C: if 's' if same directory, if 'd' if down the directory hierarchy, if 'u' if down the directory hierarchy, if 'b' if same basename, if upper case match is negative, if missing defaults to 'S' (jump to file in different dir); if an " FIM_CNS_EX_ID_STRING " is encountered after a '+' or '-' sign, jump to next or previous image having a different value for i:" FIM_CNS_EX_ID_STRING " (a trailing '+' will require a non empty value); if /" FIM_CNS_EX_RE_STRING "/ is given, will jump to the first image matching the given /" FIM_CNS_EX_RE_STRING "/ regular expression pattern; if given '+//', will jump to the first different image matching the last given regular expression pattern. Match will occur on both file name and description, eventually loaded via " FIM_FLT_DESC " or --" FIM_OSW_LOAD_IMG_DSC_FILE ". See also " FIM_VID_LASTGOTODIRECTION " and " FIM_VID_RE_SEARCH_OPTS "." " You can specify multiple arguments to " FIM_FLT_GOTO ": those after the first triggering a jump will be ignored."
 #define FIM_CMD_HELP_SCALE	FIM_FLT_SCALE " {['+'|'-']{value}['%']|'*'{value}|'w'|'h'|'a'|'b'|'+[+-*/]'|['<'|'>']}: scale the image according to a scale {value} (e.g.: 0.5,40%,'w','h','a','b'); if given '*' and a value, will multiply the current scale by that value; if given 'w', will scale according to the screen width; if given 'h', scale to the screen height; if given 'a', to the minimum of 'w' and 'h'; if given 'b', like 'a', provided that the image width exceeds 'w' or 'h'; if {value} is a number, will scale relatively to the original image width; if the number is followed by '%', the relative scale will be treated on a percent scale; " "if given '++'('+-'), will increment (decrement) the \"" FIM_VID_MAGNIFY_FACTOR "\", \"" FIM_VID_REDUCE_FACTOR "\" variables by \"" FIM_VID_SCALE_FACTOR_DELTA "\"; " "if given '+*'('+/'), will multiply (divide) the \"" FIM_VID_MAGNIFY_FACTOR "\", \"" FIM_VID_REDUCE_FACTOR "\" variables by \"" FIM_VID_SCALE_FACTOR_MULTIPLIER "\"; " "if given '<' or '>', will shrink or magnify image using nearest mipmap (cached pre-scaled version); "
 #define FIM_CMD_HELP_HELP	FIM_FLT_HELP " [" FIM_CNS_EX_ID_STRING "]: provide online help, assuming " FIM_CNS_EX_ID_STRING " is a variable, alias, or command identifier. If " FIM_CNS_EX_ID_STRING " begins with  " FIM_CNS_SLASH_STRING ", the search will be on the help contents and a list of matching items will be given instead. A list of commands can be obtained simply invoking \"" FIM_FLT_COMMANDS "\"; a list of aliases with \"" FIM_FLT_ALIAS "\"; a list of bindings with \"" FIM_FLT_BIND "\"."
 #define FIM_FLT_HELP_DESC FIM_FLT_DESC " 'load' {filename} [{sepchar}]: load description file {filename}, using the optional {sepchar} character as separator;" " 'reload': load once again description files specified at the command line with --" FIM_OSW_LOAD_IMG_DSC_FILE ", with respective separators;" " ['-all'] ['-append'] 'save' {filename} [{sepchar}]: save current list descriptions to file {filename}, using the optional {sepchar} character as separator, and if '-all' is present will save the variables, and if '-append' is present, will only append, and if '-nooverw' is present, will not overwrite existing files." " See documentation of --" FIM_OSW_LOAD_IMG_DSC_FILE " for the format of {filename}."
